# MathAlgo2

./: .coverage  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  mypy.ini  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml  docs.yml  release.yml
docs/source/: changelog.rst  conf.py  index.rst  installation.rst  intro.rst
docs/source/_static/css/: custom.css
docs/source/api/: algorithms.rst  base_math.rst  file_utils.rst  index.rst  loading.rst  math_utils.rst  monitoring.rst
docs/source/examples/: index.rst
docs/source/tutorials/: advanced.rst  best_practices.rst  index.rst  quickstart.rst
mathalgo2/: BaseMath.py  DFS.py  FileUtiles.py  FileUtlies.py  MathUtiles.py  __init__.py  basic_algo.py  code.py  file_utiles.py  linear_algebra.py  loading.py  logger.py  math.py  math_utiles.py  monitoring.py  structure.py
mathalgo2/algorithm/: GraphAlgo.py  OpAlgo.py  SearchAlgo.py  SortAlgo.py  StrAlgo.py  StrucAlgo.py  __init__.py  numerical.py  optimization.py
mathalgo2/algorithm/optimizers/: __init__.py  genetic.py  gradient_descent.py  simulated_annealing.py
mathalgo2/algorithm/string/: KMP.py  RabinKarp.py
mathalgo2/todo/: optimization  search  sort  string  structure
mathalgo2/visualization/: __init__.py  function_plot.py  matrix_plot.py
tests/: __init__.py  test_base_math.py  test_basic_algo.py  test_code.py  test_file_utils.py  test_graph_algo.py  test_logger.py  test_math_utils.py  test_op_algo.py  test_rabin_karp.py  test_search_algo.py  test_sort_algo.py  test_str_algo.py  test_struc_algo.py  test_structure.py
tests/unit/: test_linear_algebra.py  test_numerical.py  test_optimization.py  test_visualization.py
