[metadata]
name = mathalgo2
version = 0.4.0
author = Donseking
author_email = 0717albert@gmail.com
description = MathAlgo2 是一個全面的 Python 數學演算法與資料處理工具包，提供多樣化的演算法實現、視覺化功能、檔案處理工具以及數據分析功能。
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Donseking/MathAlgo2
project_urls =
    Bug Tracker = https://github.com/Donseking/MathAlgo2/issues
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Scientific/Engineering :: Mathematics

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    sympy
    matplotlib
    cryptography
    networkx
    pandas

[options.packages.find]
where = .
exclude =
    tests*
    docs*
    examples*

[options.extras_require]
dev =
    pytest>=6.0
    pytest-cov>=2.0
    black>=21.0
    flake8>=3.9
    mypy>=0.900

doc =
    sphinx>=4.0
    sphinx-rtd-theme>=0.5

test =
    pytest>=6.0
    pytest-cov>=2.0

[flake8]
max-line-length = 88
extend-ignore = E203, W503
exclude =
    .git,
    __pycache__,
    build,
    dist,
    docs
per-file-ignores =
    __init__.py:F401,F403
    test_*.py:D103
max-complexity = 10
docstring-convention = google

[isort]
profile = black
multi_line_output = 3
include_trailing_comma = True
force_grid_wrap = 0
use_parentheses = True
ensure_newline_before_comments = True
line_length = 88
